--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,34 @@
-name: main
-on: push
+name: Node CI
+
+on:
+  - push
+  - pull_request
+
+env:
+  CI: true
+
 jobs:
-  some-job:
+  build:
+
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [18.x]
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        id: checkout
+        uses: actions/checkout@v4
 
-      - name: Run setup
-        run: make setup
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+      - run: make install
+      - run: make lint
+      - run: make test
 
-      - name: Run tests
-        run: make test
-
-      - name: Run linter
-        run: make lint
+      - name: Print hello from Hexlet
+        uses: hexlet-components/hello-from-hexlet-action@release
